<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.login.features.Perfil.PerfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/perfil_lbl_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perfil_lbl_fullname"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/perfil_txt_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/perfil_lbl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perfil_lbl_email"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/perfil_txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/perfil_btn_volver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perfil_btn_volver" />


    </LinearLayout>
</ScrollView>